# MLOps-Niklas-og-Morten

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Jenkinsfile  README.md  data.py  docker-compose.yml  evaluate.py  inference.py  main.py  pyproject.toml  train.py  train_script.py
.github/workflows/: ci.yml
configs/: base.yaml  data.yaml  model.yaml  training.yaml
scripts/: evaluate.sh  inference.sh  train.sh
src/: __init__.py  config.py  data.py  eval.py  infer.py  model.py  train.py  utils.py
tests/: conftest.py  test_config.py  test_data.py  test_model.py
