[project]
name = "mlops-niklas-og-morten"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "mlflow",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "torch>=2.10.0",
    "transformers",
]
